More copy changes and a new logo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,15 +20,14 @@
 
     <div class="project">
       <h2><a href="https://github.com/rubymem/bundler-leak" target="_blank">Bundler-Leak <i class="fa fa-github"></i></a></h2>
-      <p>Free utility that audits your Gemfile.lock against the advisory database.</p>
+      <p>Free utility that audits your Gemfile.lock against the memory advisory database.</p>
     </div>
   </section>
 
 
   <section class="footer">
     <div class="disclaimer">
-      <p>Supported by <a href="https://appcanary.com"><%= image_tag "appcanary-hero.png", title: "Appcanary", width: "150px" %></a></p>
-      <p class="acknowledgement">This domain was graciously donated by Jordi Massaguer.</p>
+      <p>Supported by <a href="https://fastruby.io"><%= image_tag "appcanary-hero.png", title: "Appcanary", width: "150px" %></a></p>
     </div>
   </section>
 
