--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,11 @@
 <section class="header">
   <div class="rubyseclogo">
-    <a href="/"><%= image_tag "rubysec-logo.png" %></a>
+    <a href="/"><%= image_tag "rubymem-logo.png" %></a>
   </div>
 
   <div class="title">
-    <h1><a href="/">Rubysec</a></h1>
-    <p>Providing security resources for the Ruby community.
-      <br/>Follow us <a href="https://twitter.com/rubysec" target="_blank">@rubysec</a> or email us via info at rubysec.com</p>
+    <h1><a href="/">Rubymem</a></h1>
+    <p>Providing memory resources for the Ruby community.
+      <br/>Follow us <a href="https://twitter.com/rubymemory" target="_blank">@rubymemory</a> or email us via info at rubymem.com</p>
   </div>
 </section>
