--- a/app/views/layouts/rubysec.html.erb
+++ b/app/views/layouts/rubysec.html.erb
@@ -7,8 +7,8 @@
     <title>Rubysec</title>
 
     <%= render :partial => "layouts/typekit" %> 
-    <%= stylesheet_link_tag    'rubysec', media: 'all'%>
-    <%= javascript_include_tag 'rubysec' %>
+    <%= stylesheet_link_tag    'rubymem', media: 'all'%>
+    <%= javascript_include_tag 'rubymem' %>
 
     <%= csrf_meta_tags %>
 
