--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <section class="header">
-  <div class="rubyseclogo">
+  <div class="rubymemlogo">
     <a href="/"><%= image_tag "rubymem-logo.png" %></a>
   </div>
 
