Add fastruby.io as sponsor for rubymem.com

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
 
   <section class="footer">
     <div class="disclaimer">
-      <p>Supported by <a href="https://fastruby.io"><%= image_tag "appcanary-hero.png", title: "Appcanary", width: "150px" %></a></p>
+      <p>Supported by <a href="https://fastruby.io"><%= image_tag "fastruby-logo.png", title: "Fastruby", width: "150px" %></a></p>
     </div>
   </section>
 
