Use correct twitter handle

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,6 @@
   <div class="title">
     <h1><a href="/">Rubymem</a></h1>
     <p>Providing memory resources for the Ruby community.
-      <br/>Follow us <a href="https://twitter.com/rubymemory" target="_blank">@rubymemory</a> or email us via info at rubymem.com</p>
+      <br/>Follow us <a href="https://twitter.com/memruby" target="_blank">@memruby</a> or email us via info at rubymem.com</p>
   </div>
 </section>
